# MyDemos

./: .env_example  .gitignore  README.md  pyproject.toml
configs/: llm_demos_conf.yaml
my_demos/DDP_demos/: DDP1_original_training.py  DDP2_ddp_training.py  DDP3_torchrun_training.py  DDP4_fsdp_torchrun_training.py  DDP5_multi_node_torchrun_training.py  alexnet.py  policies.py  train1.sh  train2.sh  train3.sh  train4.sh  train5.sh
my_demos/MRO_demos/: README.md  mro_demo1.py  mro_demo2.py  mro_demo3.py  mro_demo4.py  mro_demo5.py
my_demos/attn_map_demos/: README.md  visualize_attention.py  vit_attn_map_demo.py
my_demos/common/: utils.py
my_demos/langgraph/get_started/: agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  workflow1.py  workflow2.py  workflow3.py
my_demos/llava_demos/: embedding_study.py  study_prepare_inputs_for_lvlm.py
my_demos/llm_demos/: __init__.py  qwen_demo.py  run.py  tiny_llama_demo.py
my_demos/llm_demos/base/: __init__.py  llm_chatbot.py
my_demos/scapy_demos/: README.md  demo1_tokenization.py  demo2_pos_tagging.py  demo2_pos_tagging2.py  demo3_named_entity.py  demo4_dependency_parsing.py  demo5_sentence_seg.py  demo6_word_vectors.py
scripts/attn_map_demos/: run_vit_attn_map.sh
scripts/langgraph/: run_get_started.sh
scripts/llm_demos/: run_llm_demos.sh
